Fri Mar 11 10:39:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ImR_Client/ImR_Client_Adapter_Impl.cpp:
          Explicitly catch a CORBA::COMM_FAILURE when notifying the
          ImR that we are shuttind down. When the ORB is shutting down
          it can drop replies if configured to do so and then we get
          this exception which we silently ignore

Fri Mar 11 02:53:43 2005  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* tao/Strategies/SCIOP_Connection_Handler.cpp:
	* tao/Strategies/SHMIOP_Connection_Handler.cpp:
	* tao/Strategies/UIOP_Connection_Handler.cpp:

	  Fixed compilation errors in protocols other than IIOP.

Fri Mar 11 12:00:35 (IST) 2005  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	This checkin is mainly to address a problem with ORB
        shutdown. The problem shows up when a client ORB with RW strategy
        is communicating with a misbehaved server. It is possible that the
	client sent a request to the server and is waiting for
	replies. The server may not send back a reply at all. Meanwhile
	the thread waiting for reply continues to wait even if the ORB is
	shutdown making the process hang. This is simply ill behaviour.

        * tao/Thread_Lane_Resources_Manager.h:

	  Added a new pure virtual method cleanup_rw_transports () that
	  can be overridden in concrete classes.

	* tao/ORB_Core.cpp:

	  Call cleanup_rw_transports () during shutdown ().

	* tao/Default_Thread_Lane_Resources_Manager.cpp:
        * tao/Default_Thread_Lane_Resources_Manager.h:
	* tao/RTCORBA/RT_Thread_Lane_Resources_Manager.cpp:
        * tao/RTCORBA/RT_Thread_Lane_Resources_Manager.h:

	  Concrete implementations for cleanup_rw_transports (). The
	  implementation just delegates it concrete lane resources that
	  are maintained.

	* tao/Cache_Entries.cpp:
	* tao/Cache_Entries.h:
	* tao/Cache_Entries.inl:

	  Added the code in TAO namespace. Redefined a new state enum
	  called Cache_Entries_State.
